syntax = "proto3";

option go_package = "github.com/dislinkt/auth-service/proto";

package proto;

import "google/api/annotations.proto";

service AuthService{
  rpc AuthenticateUser(LoginRequest) returns(JwtTokenResponse) {
    option (google.api.http) = {
      post: "/api/auth/login",
      body: "userData"
    };
  }

  rpc ValidateToken(ValidateRequest) returns(ValidateResponse) {
    option (google.api.http) = {
      post: "/api/auth/validate",
      body: "jwt"
    };
  }

  rpc PasswordlessLogin(PasswordlessLoginRequest) returns(PasswordlessLoginResponse) {
    option (google.api.http) = {
      post: "/api/auth/passwordless-login",
      body: "*"
    };
  }

  rpc ConfirmEmailLogin(ConfirmEmailLoginRequest) returns(ConfirmEmailLoginResponse) {
    option (google.api.http) = {
      post: "/api/auth/passwordless-confirm",
      body: "*"
    };
  }

  rpc ActivateAccount(ActivationRequest) returns(ActivationResponse) {
    option (google.api.http) = {
      post: "/api/auth/activate-account",
      body: "*"
    };
  }

  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {
    option (google.api.http) = {
      post: "/api/auth/changePassword"
      body: "*"
    };
  }
}

message LoginRequest {
  UserData userData = 1;
}

message JwtTokenResponse {
  JwtToken jwt = 1;
}

message JwtToken {
  string jwt = 1;
}

message UserData {
  string username = 1;
  string password = 2;
}

message ValidateRequest { JwtToken jwt = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  string username = 3;
  string role = 4;
}

message PasswordlessLoginRequest{
  string email = 1;
}

message PasswordlessLoginResponse{
  string success = 1;
}

message ConfirmEmailLoginRequest{
  string token = 1;
}

message ConfirmEmailLoginResponse{
  string token = 1;
}

message ActivationRequest {
  string token = 1;
}

message ActivationResponse {
  string token = 1;
}

message ChangePasswordRequest {
  string oldPassword = 1;
  string newPassword = 2;
  string newReenteredPassword = 3;
}

message ChangePasswordResponse {
  string message = 1;
  string statusCode = 2;
}